documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32NET.VB

    Public Declare Function AX1_SchedBuild Lib "AX1W32.DLL" Alias "_AX1_SchedBuild@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedCrtRobin Lib "AX1W32.DLL" Alias "_AX1_SchedCrtRobin@8" (ByRef hrobin As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedCrtSub Lib "AX1W32.DLL" Alias "_AX1_SchedCrtSub@8" (ByRef hsub As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedFrameEnd Lib "AX1W32.DLL" Alias "_AX1_SchedFrameEnd@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedFrameStart Lib "AX1W32.DLL" Alias "_AX1_SchedFrameStart@12" (ByVal usframetime As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedItemUpdate Lib "AX1W32.DLL" Alias "_AX1_SchedItemUpdate@24" (ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByVal hscheditem As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedNoop Lib "AX1W32.DLL" Alias "_AX1_SchedNoop@20" (ByVal bSkip As Integer, ByVal bShot As Integer, ByRef hscheditem As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedPort Lib "AX1W32.DLL" Alias "_AX1_SchedPort@32" (ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByVal hport As Integer, ByRef hscheditem As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedRobin Lib "AX1W32.DLL" Alias "_AX1_SchedRobin@24" (ByVal bSkip As Integer, ByVal bShot As Integer, ByVal hrobin As Integer, ByRef hscheditem As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SchedSub Lib "AX1W32.DLL" Alias "_AX1_SchedSub@24" (ByVal bSkip As Integer, ByVal bShot As Integer, ByVal hsub As Integer, ByRef hscheditem As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqClear Lib "AX1W32.DLL" Alias "_AX1_SeqClear@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqConfig Lib "AX1W32.DLL" Alias "_AX1_SeqConfig@8" (ByVal configval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqFindCheckValidType Lib "AX1W32.DLL" Alias "_AX1_SeqFindCheckValidType@4" (ByVal seqtype As Short) As Integer
    Public Declare Function AX1_SeqFindInit Lib "AX1W32.DLL" Alias "_AX1_SeqFindInit@12" (ByRef seqbuf As Byte, ByVal seqbufsize As Integer, ByRef sfinfo As SEQFINDINFO) As Integer
    Public Declare Function AX1_SeqFindNextEx Lib "AX1W32.DLL" Alias "_AX1_SeqFindNextEx@16" (ByRef pRecord As Byte, ByVal recordcount As Integer, ByRef seqtype As Short, ByRef sfinfo As SEQFINDINFO) As Integer
    Public Declare Function AX1_SeqPause Lib "AX1W32.DLL" Alias "_AX1_SeqPause@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqRd Lib "AX1W32.DLL" Alias "_AX1_SeqRd@12" (ByRef bufptr As Byte, ByRef bufcountptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqRestart Lib "AX1W32.DLL" Alias "_AX1_SeqRestart@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqResume Lib "AX1W32.DLL" Alias "_AX1_SeqResume@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqSetMonitor Lib "AX1W32.DLL" Alias "_AX1_SeqSetMonitor@16" (ByVal bmonitor As Integer, ByVal vlid As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SeqStatus Lib "AX1W32.DLL" Alias "_AX1_SeqStatus@8" (ByRef statusptr As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SubSchedNoop Lib "AX1W32.DLL" Alias "_AX1_SubSchedNoop@20" (ByVal bSkip As Integer, ByVal bShot As Integer, ByRef hscheditem As Integer, ByVal hsub As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SubSchedPort Lib "AX1W32.DLL" Alias "_AX1_SubSchedPort@32" (ByVal bSkip As Integer, ByVal bShot As Integer, ByVal bTxA As Integer, ByVal bTxB As Integer, ByVal hport As Integer, ByRef hscheditem As Integer, ByVal hsub As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_SubSchedRobin Lib "AX1W32.DLL" Alias "_AX1_SubSchedRobin@24" (ByVal bSkip As Integer, ByVal bShot As Integer, ByVal hrobin As Integer, ByRef hscheditem As Integer, ByVal hsub As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_TimeGetDelta Lib "AX1W32.DLL" Alias "_AX1_TimeGetDelta@24" (ByVal tth1 As Integer, ByVal ttl1 As Integer, ByVal tth2 As Integer, ByVal ttl2 As Integer, ByRef sec As Integer, ByRef usec As Integer) As Integer
    Public Declare Function AX1_TimeGetSeconds Lib "AX1W32.DLL" Alias "_AX1_TimeGetSeconds@16" (ByVal tth As Integer, ByVal ttl As Integer, ByRef sec As Integer, ByRef usec As Integer) As Integer
    Public Declare Function AX1_TrigClearBits Lib "AX1W32.DLL" Alias "_AX1_TrigClearBits@8" (ByVal bits As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_TrigGetVal Lib "AX1W32.DLL" Alias "_AX1_TrigGetVal@8" (ByRef trigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_TrigSetBits Lib "AX1W32.DLL" Alias "_AX1_TrigSetBits@8" (ByVal bits As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_TrigSetVal Lib "AX1W32.DLL" Alias "_AX1_TrigSetVal@8" (ByVal trigval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_TrigSinkConfig Lib "AX1W32.DLL" Alias "_AX1_TrigSinkConfig@20" (ByVal ctrlflags As Integer, ByVal trigid As Short, ByVal ulComp As Integer, ByVal ulMask As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLConfig Lib "AX1W32.DLL" Alias "_AX1_VLConfig@28" (ByVal configval As Integer, ByVal vlid As Short, ByVal bag As Short, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLConfigMAC Lib "AX1W32.DLL" Alias "_AX1_VLConfigMAC@32" (ByVal configval As Integer, ByVal macdst As ADDRESS, ByVal bag As Short, ByVal skewmax As Integer, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetHandle Lib "AX1W32.DLL" Alias "_AX1_VLGetHandle@16" (ByVal vlid As Short, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetHandleMAC Lib "AX1W32.DLL" Alias "_AX1_VLGetHandleMAC@16" (ByRef pmacdst As ADDRESS, ByRef hvl As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetInfo Lib "AX1W32.DLL" Alias "_AX1_VLGetInfo@40" (ByRef configval As Integer, ByRef vlid As Short, ByRef pmacdst As ADDRESS, ByRef pmacsrc As ADDRESS, ByRef ipdst As Integer, ByRef ipsrc As Integer, ByRef bag As Integer, ByRef skew As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetNext Lib "AX1W32.DLL" Alias "_AX1_VLGetNext@20" (ByVal flag As Short, ByRef nextVL As Short, ByVal lastVL As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetNextMAC Lib "AX1W32.DLL" Alias "_AX1_VLGetNextMAC@24" (ByVal flag As Short, ByRef pnextMAC As ADDRESS, ByVal lastMAC As ADDRESS, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLGetPortCount Lib "AX1W32.DLL" Alias "_AX1_VLGetPortCount@12" (ByRef portcnt As Short, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_VLSetFactors Lib "AX1W32.DLL" Alias "_AX1_VLSetFactors@24" (ByVal factor0 As Integer, ByVal factor1 As Integer, ByVal factor2 As Integer, ByVal factor3 As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CardCheck Lib "AX1W32.DLL" Alias "_AX1_CardCheck@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CardGetInfo Lib "AX1W32.DLL" Alias "_AX1_CardGetInfo@8" (ByVal infotype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CardGetInfoName Lib "AX1W32.DLL" Alias "_AX1_CardGetInfoName@4" (ByVal handleval As Integer) As String
    Public Declare Sub AX1_CardInit Lib "AX1W32.DLL" Alias "_AX1_CardInit@0" ()
    Public Declare Function AX1_CardIsHostRcv Lib "AX1W32.DLL" Alias "_AX1_CardIsHostRcv@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CardIsRunning Lib "AX1W32.DLL" Alias "_AX1_CardIsRunning@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CardOpenEx Lib "AX1W32.DLL" Alias "_AX1_CardOpenEx@12" (ByRef lpHandle As Integer, ByVal cardname As String, ByVal cardnum As Integer) As Integer
    Public Declare Function AX1_CardOpenExx Lib "AX1W32.DLL" Alias "_AX1_CardOpenExx@20" (ByRef lpHandle As Integer, ByVal cardname As String, ByVal cardnum As Integer, ByRef hAppWnd As Integer, ByVal uiRemovalMsg As Short) As Integer
    Public Declare Function AX1_CardResetEx Lib "AX1W32.DLL" Alias "_AX1_CardResetEx@4" (ByVal handleval As Integer) As Integer
    Public Declare Sub AX1_CardResetExx Lib "AX1W32.DLL" Alias "_AX1_CardResetExx@4" (ByVal handleval As Integer)
    Public Declare Function AX1_Checksum Lib "AX1W32.DLL" Alias "_AX1_Checksum@12" (ByVal msb As Byte, ByVal lsb As Byte, ByVal sum As Short) As Short
    Public Declare Function AX1_CommRpcArgStart Lib "AX1W32.DLL" Alias "_AX1_CommRpcArgStart@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommRpcArgStop Lib "AX1W32.DLL" Alias "_AX1_CommRpcArgStop@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommRpcCall Lib "AX1W32.DLL" Alias "_AX1_CommRpcCall@8" (ByVal rpcnum As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommRpcCallEx Lib "AX1W32.DLL" Alias "_AX1_CommRpcCallEx@8" (ByVal rpcnum As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommRpcInParam Lib "AX1W32.DLL" Alias "_AX1_CommRpcInParam@20" (ByRef parg As Integer, ByVal argsize As Integer, ByVal ptrflag As Integer, ByVal copyflag As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommRpcInParamPtr Lib "AX1W32.DLL" Alias "_AX1_CommRpcInParamPtr@16" (ByRef parg As Integer, ByVal argsize As Integer, ByVal copyflag As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommRpcInParamVal Lib "AX1W32.DLL" Alias "_AX1_CommRpcInParamVal@12" (ByRef parg As Integer, ByVal argsize As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommRpcOutParamPtr Lib "AX1W32.DLL" Alias "_AX1_CommRpcOutParamPtr@16" (ByVal index As Integer, ByRef parg As Integer, ByVal argsize As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_CommTrigger Lib "AX1W32.DLL" Alias "_AX1_CommTrigger@12" (ByVal waittype As Integer, ByVal trignum As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DetectPort Lib "AX1W32.DLL" Alias "_AX1_DetectPort@12" (ByRef portnum As Short, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DetectVL Lib "AX1W32.DLL" Alias "_AX1_DetectVL@12" (ByRef vlid As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_DetectVLIgnore Lib "AX1W32.DLL" Alias "_AX1_DetectVLIgnore@12" (ByVal vlid As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_Div Lib "AX1W32.DLL" Alias "_AX1_Div@8" (ByVal diva As Integer, ByVal divb As Integer) As Integer
